# potionforge

./: .gitignore  Cargo.toml  README.md  config.yml.example  debug.yml.example  debug.yml.sample  recommend.yml.example  sample.sh
potionforge/: Cargo.toml  pyproject.toml
potionforge/benches/: enumerate_bench.rs  process_bench.rs  simulate_bench.rs
potionforge/src/: core.rs  enumerate.rs  lib.rs  process.rs  recommend.rs  simulate.rs  testdata.rs
potionforge/src/models/: ingredients.rs  mod.rs  potion.rs  recipe.rs  traits.rs
potionkeeper/: Cargo.toml
potionkeeper/src/: debug.rs  enumerate.rs  main.rs  printer.rs  recommend.rs  recommend.yml.example
potionkeeper/src/models/: ingredients.rs
potions-python/: demo.py  demo2.py  potions.yml
potions-python/potions/: cli.py  model.py  permute.py  printer.py  simulate.py  smarter.py  smarter_together.py  suggest.py
potionserpent/: Cargo.toml  pyproject.toml
potionserpent/src/: lib.rs  models.rs
src/: main.rs  models.rs  permute.rs  printer.rs  recommend.rs  simulate.rs
src/models/: ingredients.rs  mod.rs  potion.rs
