[package]
name = "potions-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
sled = { version = "0.34", features = ["compression"] }
bincode = "1.3"
rayon = "1.5.1"
linya = "0.3.0"
