[package]
name = "potions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.1"
indicatif = "0.17.6"
console = { version = "0.15", default-features = false, features = [
    "ansi-parsing",
] }
coin_cbc = "0.1.8"
serde_yaml = "0.8"
prettytable-rs = "0.8.0"
