[package]
name = "potionforge"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "potionforge"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["lib", "cdylib"]

[dependencies]
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rayon = "1.5.1"
indicatif = "0.17.6"
console = { version = "0.15", default-features = false, features = [
    "ansi-parsing",
] }
coin_cbc = "0.1.8"

[dependencies.pyo3]
version = "0.19.2"
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
features = ["abi3-py37"]
