[package]
name = "potionforge"
version = "0.1.1"
edition = "2021"

[lib]
doctest = false

crate-type = ["lib"]

[dependencies]
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rayon = "1.5.1"
indicatif = "0.17.6"
console = { version = "0.15", default-features = false, features = [
    "ansi-parsing",
] }
highs = "1.5.1"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simulate_bench"
harness = false

[[bench]]
name = "enumerate_bench"
harness = false

[[bench]]
name = "process_bench"
harness = false
