[package]
name = "potionkeeper"
version = "0.1.3"
edition = "2021"

[dependencies]
itertools = "0.10"
potionforge = { path = "../potionforge" }
clap = { version = "4.4.5", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
prettytable-rs = "0.8.0"
structopt = "0.3.26"
